--- a/Example/AeroSwift/Base.lproj/Main.storyboard
+++ b/Example/AeroSwift/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="XLU-iB-bDD">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -20,11 +20,138 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dCh-gI-dto">
+                                <rect key="frame" x="133" y="318" width="108" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="2qn-3K-UoB"/>
+                                    <constraint firstAttribute="width" constant="108" id="nBj-Mp-fxa"/>
+                                </constraints>
+                                <state key="normal" title="Show Examples"/>
+                                <connections>
+                                    <segue destination="AfD-34-rcq" kind="show" id="9Mz-xL-v8X"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="dCh-gI-dto" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="WAs-j4-RhM"/>
+                            <constraint firstItem="dCh-gI-dto" firstAttribute="centerY" secondItem="kh9-bI-dsS" secondAttribute="centerY" id="jpS-Jg-6Cr"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="DTg-K7-Vjv"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="372" y="33.733133433283363"/>
+        </scene>
+        <!--AeroSoft-->
+        <scene sceneID="kRi-sx-V9c">
+            <objects>
+                <tableViewController title="AeroSoft" id="AfD-34-rcq" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="CeN-mp-Gdb">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <sections>
+                            <tableViewSection headerTitle="Examples" id="jDm-Bp-H1R">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="mFE-ih-dvK" style="IBUITableViewCellStyleDefault" id="ebB-CL-moE">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ebB-CL-moE" id="Vff-oN-oua">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="UIView rotation" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="mFE-ih-dvK">
+                                                    <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="fCW-5l-PGo" kind="show" id="YbI-PH-tV5"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="AfD-34-rcq" id="LIN-RN-WQ9"/>
+                            <outlet property="delegate" destination="AfD-34-rcq" id="3e5-8j-nmh"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QAa-M0-ZsS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1092" y="32.833583208395808"/>
+        </scene>
+        <!--Rotate View Controller-->
+        <scene sceneID="p4w-wJ-dWL">
+            <objects>
+                <viewController id="fCW-5l-PGo" customClass="RotateViewController" customModule="AeroSwift_Example" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="prE-ad-vDX"/>
+                        <viewControllerLayoutGuide type="bottom" id="36u-rl-dCE"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="RW7-NQ-xsR">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="spinner" translatesAutoresizingMaskIntoConstraints="NO" id="IbV-GD-JcQ">
+                                <rect key="frame" x="164" y="72" width="48" height="48"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="48" id="34d-lH-X1U"/>
+                                    <constraint firstAttribute="height" constant="48" id="D2u-9R-sCI"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h9i-BF-5sF">
+                                <rect key="frame" x="140" y="318" width="95" height="30"/>
+                                <state key="normal" title="Start Rotation"/>
+                                <connections>
+                                    <action selector="startRotationPressed:" destination="fCW-5l-PGo" eventType="touchUpInside" id="Af6-JB-VYd"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="h9i-BF-5sF" firstAttribute="centerY" secondItem="RW7-NQ-xsR" secondAttribute="centerY" id="9v4-yV-Mi4"/>
+                            <constraint firstItem="h9i-BF-5sF" firstAttribute="centerX" secondItem="RW7-NQ-xsR" secondAttribute="centerX" id="ciK-sQ-uRm"/>
+                            <constraint firstItem="IbV-GD-JcQ" firstAttribute="top" secondItem="prE-ad-vDX" secondAttribute="bottom" constant="8" id="kgr-eK-XS8"/>
+                            <constraint firstItem="IbV-GD-JcQ" firstAttribute="centerX" secondItem="RW7-NQ-xsR" secondAttribute="centerX" id="xNv-M4-XNP"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="imageView" destination="IbV-GD-JcQ" id="1ug-Dy-PK3"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CYI-eV-ybL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2029.5999999999999" y="-357.57121439280365"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="vLM-xv-iys">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="XLU-iB-bDD" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="yZZ-SL-qVD">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="WTC-sA-rny"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IP8-79-lXJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-370" y="34"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="spinner" width="48" height="48"/>
+    </resources>
 </document>
