--- a/Example/AeroSwift/Base.lproj/Main.storyboard
+++ b/Example/AeroSwift/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -92,6 +93,26 @@
                                             <segue destination="fKb-GC-dCs" kind="show" id="XnH-EN-Z80"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="9ar-8F-ZPE" style="IBUITableViewCellStyleDefault" id="Vsy-mg-5Kx">
+                                        <rect key="frame" x="0.0" y="116" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Vsy-mg-5Kx" id="zdK-a2-ueg">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Dynamic label height" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="9ar-8F-ZPE">
+                                                    <rect key="frame" x="16" y="0.0" width="343" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="Ckh-ny-BeX" kind="show" id="8sN-IV-3Hf"/>
+                                        </connections>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -104,6 +125,67 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QAa-M0-ZsS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1092" y="32.833583208395808"/>
+        </scene>
+        <!--Dynamic Label Height View Controller-->
+        <scene sceneID="tqo-qt-9p8">
+            <objects>
+                <viewController id="Ckh-ny-BeX" customClass="DynamicLabelHeightViewController" customModule="AeroSwift_Example" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Npa-lt-qDb"/>
+                        <viewControllerLayoutGuide type="bottom" id="UyK-Dq-R1s"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="zI4-Im-aAw">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Input text" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DPg-TW-Tth">
+                                <rect key="frame" x="16" y="72" width="343" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="A1G-8Q-bUF"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oFr-FA-u56">
+                                <rect key="frame" x="168" y="110" width="38" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="38" id="llD-tF-b6Y"/>
+                                    <constraint firstAttribute="height" constant="30" id="ta0-8k-2Cf"/>
+                                </constraints>
+                                <state key="normal" title="Show"/>
+                                <connections>
+                                    <action selector="showButtonPressed:" destination="Ckh-ny-BeX" eventType="touchUpInside" id="hqB-UX-wO3"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dOE-Z5-jsh">
+                                <rect key="frame" x="16" y="148" width="343" height="0.0"/>
+                                <color key="backgroundColor" red="1" green="0.9481443007" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="DPg-TW-Tth" firstAttribute="leading" secondItem="zI4-Im-aAw" secondAttribute="leadingMargin" id="2ON-Ly-vV4"/>
+                            <constraint firstItem="oFr-FA-u56" firstAttribute="centerX" secondItem="zI4-Im-aAw" secondAttribute="centerX" id="CJa-bm-Yv0"/>
+                            <constraint firstItem="DPg-TW-Tth" firstAttribute="trailing" secondItem="zI4-Im-aAw" secondAttribute="trailingMargin" id="N9z-4s-46j"/>
+                            <constraint firstItem="dOE-Z5-jsh" firstAttribute="trailing" secondItem="zI4-Im-aAw" secondAttribute="trailingMargin" id="STi-N1-Kcq"/>
+                            <constraint firstItem="oFr-FA-u56" firstAttribute="top" secondItem="DPg-TW-Tth" secondAttribute="bottom" constant="8" id="VRG-37-218"/>
+                            <constraint firstItem="DPg-TW-Tth" firstAttribute="top" secondItem="Npa-lt-qDb" secondAttribute="bottom" constant="8" id="Xf2-La-OP3"/>
+                            <constraint firstItem="dOE-Z5-jsh" firstAttribute="leading" secondItem="zI4-Im-aAw" secondAttribute="leadingMargin" id="Z5q-uj-ihb"/>
+                            <constraint firstItem="dOE-Z5-jsh" firstAttribute="top" secondItem="oFr-FA-u56" secondAttribute="bottom" constant="8" id="bJH-Oo-R6G"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="label" destination="dOE-Z5-jsh" id="6XI-cg-M5c"/>
+                        <outlet property="textField" destination="DPg-TW-Tth" id="7Fd-Me-rLo"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="clp-kN-mZz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2061.5999999999999" y="94.902548725637189"/>
         </scene>
         <!--Rotate View Controller-->
         <scene sceneID="p4w-wJ-dWL">
@@ -146,7 +228,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CYI-eV-ybL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2029.5999999999999" y="-357.57121439280365"/>
+            <point key="canvasLocation" x="2052" y="-1231"/>
         </scene>
         <!--Decode Item View Controller-->
         <scene sceneID="z2V-iB-5Me">
@@ -201,7 +283,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LbO-yX-NYQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2029.5999999999999" y="303.59820089955025"/>
+            <point key="canvasLocation" x="2052" y="-570"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="vLM-xv-iys">
